--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
 <body>
     <h1> I'm sorry it wouldn't happen again.</h1>
+    <h2> second line because i don't understand</h2>
 </body>
