--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title> Hello world!</title>
     <style>
         html {
-            font-family: 'Trebuchet MS';
+            font-family: sans-serif;
         }
         body {
             background-color: #333;
@@ -16,11 +16,12 @@
     </style>
 </head>
 <body>
-    <h1> I'm sorry it wouldn't happen again.</h1>
-    <h2> second line because i don't understand</h2>
-    <h3> I don't understand, should i make a changes first <br>
-         in order to the webpage to push?
-    </h3>
-    <h4> So it became much smaller in every <br> new hx.</h4>
+    <h1>This is the Heading of this HTML file.</h1>
+    <p>This HTML is configured to use th system's sans-serif font.</p>
+    <h2 style="font: size 22px;px; font-family:'Trebuchet MS', serif;">
+        This is a customised heading.
+    </h2>
+    <img src="imgsrc.jpg">
+    <p>I know this seems extremely old and bare as hell but<br> i've been trying my best because i'm new (I have 200000 power at MLBB).</p>
 </body>
 </html>
