--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
 </head>
 <body>
     <h1>This is the Heading of this HTML file.</h1>
-    <p>This HTML is configured to use th system's sans-serif font.</p>
-    <h2 style="font: size 22px;px; font-family:'Trebuchet MS', serif;">
+    <p>This HTML is configured to use the system's sans-serif font.</p>
+    <h2 style="font: size 22px; font-family:'Trebuchet MS', serif;">
         This is a customised heading.
     </h2>
+    <h3><b>Bolded Text.</b> <i>Italic Text.</i> <abbr title="Mobile Legends: Bang Bang">MLBB</abbr>.</h3>
     <img src="imgsrc.jpg">
-    <p>I know this seems extremely old and bare as hell but<br> i've been trying my best because i'm new (I have 200000 power at MLBB).</p>
+    <hr>k</hr>
 </body>
 </html>
